[gd_scene load_steps=23 format=3 uid="uid://ewo22t74u83d"]

[ext_resource type="Script" path="res://UI/Ciclo Dia_Noche/Diurn.gd" id="1_yrnus"]
[ext_resource type="Texture2D" uid="uid://cheiqx3f6j47l" path="res://Assets/Tiles/GUI/GUI/GUI_4xBlackpng.png" id="2_ef1dx"]
[ext_resource type="FontFile" uid="uid://refuf5j5hr24" path="res://Assets/Fonts/PixelOperator8.ttf" id="3_jpjeb"]
[ext_resource type="Texture2D" uid="uid://dap6v3bn0l4a0" path="res://Assets/Tiles/GUI/GUI/GUI_4x.png" id="4_ph447"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ilqx1"]
atlas = ExtResource("2_ef1dx")
region = Rect2(100, 4, 88, 88)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bw3bl"]
texture = SubResource("AtlasTexture_ilqx1")

[sub_resource type="AtlasTexture" id="AtlasTexture_637hk"]
atlas = ExtResource("2_ef1dx")
region = Rect2(0, 94, 32, 34)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p6mju"]
texture = SubResource("AtlasTexture_637hk")

[sub_resource type="LabelSettings" id="LabelSettings_neusm"]
font = ExtResource("3_jpjeb")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_qgbhl"]
font = ExtResource("3_jpjeb")
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_hx2mj"]
atlas = ExtResource("2_ef1dx")
region = Rect2(292, 100, 90, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i42la"]
texture = SubResource("AtlasTexture_hx2mj")
region_rect = Rect2(0, 0, 88, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e2yd"]
atlas = ExtResource("2_ef1dx")
region = Rect2(405, 26, 40, 41)

[sub_resource type="LabelSettings" id="LabelSettings_s7glv"]
font = ExtResource("3_jpjeb")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_jq5wu"]
font = ExtResource("3_jpjeb")
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_4daqd"]
font = ExtResource("3_jpjeb")
font_size = 8

[sub_resource type="AtlasTexture" id="AtlasTexture_13pft"]
atlas = ExtResource("4_ph447")
region = Rect2(0, 95, 32, 33)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2f0br"]
content_margin_bottom = 14.0
texture = SubResource("AtlasTexture_13pft")

[sub_resource type="LabelSettings" id="LabelSettings_udjss"]
font = ExtResource("3_jpjeb")
font_size = 8

[sub_resource type="Animation" id="Animation_tw2rl"]
resource_name = "Contador"
length = 2.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ciclo_UI/Container/Timer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.466667, 0.833333, 1.23333, 1.66667, 1.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}

[sub_resource type="Animation" id="Animation_jryni"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ciclo_UI/Container/Timer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_endmq"]
_data = {
"Contador": SubResource("Animation_tw2rl"),
"RESET": SubResource("Animation_jryni")
}

[node name="Diurn" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yrnus")

[node name="Ciclo_UI" type="CanvasLayer" parent="."]

[node name="Container" type="Panel" parent="Ciclo_UI"]
offset_left = 9.0
offset_top = 7.0
offset_right = 113.0
offset_bottom = 87.0
theme_override_styles/panel = SubResource("StyleBoxTexture_bw3bl")

[node name="VBoxContainer" type="VBoxContainer" parent="Ciclo_UI/Container"]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0384615
anchor_top = 0.0375
anchor_right = 0.971154
anchor_bottom = 0.9625
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Panel" type="Panel" parent="Ciclo_UI/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_p6mju")

[node name="HBoxContainer" type="HBoxContainer" parent="Ciclo_UI/Container/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164948
anchor_top = 0.25
anchor_right = 0.845361
anchor_bottom = 0.833333

[node name="Mouth" type="Label" parent="Ciclo_UI/Container/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "October"
label_settings = SubResource("LabelSettings_neusm")

[node name="Day" type="Label" parent="Ciclo_UI/Container/VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = "1"
label_settings = SubResource("LabelSettings_qgbhl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Interface_Hour_Day" type="Panel" parent="Ciclo_UI/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_i42la")

[node name="TextureRect" type="TextureRect" parent="Ciclo_UI/Container/VBoxContainer/Interface_Hour_Day"]
modulate = Color(0.44599, 0.585779, 0.984375, 1)
z_index = -1
layout_mode = 0
anchor_right = 0.989691
anchor_bottom = 1.0
texture = SubResource("AtlasTexture_1e2yd")

[node name="HBoxContainer" type="HBoxContainer" parent="Ciclo_UI/Container/VBoxContainer/Interface_Hour_Day"]
z_index = 1
clip_contents = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 2.0
offset_right = 27.0
offset_bottom = 16.0
grow_horizontal = 2
scale = Vector2(0.8, 0.76)
theme_override_constants/separation = -7

[node name="Hour" type="Label" parent="Ciclo_UI/Container/VBoxContainer/Interface_Hour_Day/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "00"
label_settings = SubResource("LabelSettings_s7glv")
horizontal_alignment = 1

[node name="Minute" type="Label" parent="Ciclo_UI/Container/VBoxContainer/Interface_Hour_Day/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "00"
label_settings = SubResource("LabelSettings_jq5wu")
horizontal_alignment = 1

[node name="Week_day" type="Label" parent="Ciclo_UI/Container/VBoxContainer/Interface_Hour_Day"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -17.5
offset_top = -9.0
offset_right = 30.5
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.76, 0.759999)
text = "Lunesto"
label_settings = SubResource("LabelSettings_4daqd")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Current_Ubication" type="Panel" parent="Ciclo_UI/Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_2f0br")

[node name="Current_Ubication" type="Label" parent="Ciclo_UI/Container/VBoxContainer/Current_Ubication"]
z_index = 2
layout_mode = 0
offset_left = 19.0
offset_top = 9.0
offset_right = 95.0
offset_bottom = 17.0
scale = Vector2(0.744, 0.8)
text = "Dumb Corner"
label_settings = SubResource("LabelSettings_udjss")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Label" parent="Ciclo_UI/Container"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.490385
anchor_top = 0.3375
anchor_right = 0.538462
anchor_bottom = 0.4375
size_flags_horizontal = 4
size_flags_vertical = 1
text = ":"
label_settings = SubResource("LabelSettings_s7glv")
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_endmq")
}
